added phone numbers to sql database and testdata added support for this in application code

--- a/CalendarApplication/CalendarApplication/Views/Home/About.cshtml
+++ b/CalendarApplication/CalendarApplication/Views/Home/About.cshtml
@@ -5,19 +5,18 @@
 
 <h2>About</h2>
 
-
-
-
-@using (Html.BeginForm())
-{
-    @:PKSU 2013 calendar web application for events v0.1.
+    PKSU 2013 calendar web application for events v0.1.
     <br/>
-    @:Created in 2013 by Stephan S. Lorenzen, Andreas E. Olsen and Johan V. Damgaard
+    Created in 2013 by Stephan S. Lorenzen, Andreas E. Olsen and Johan V. Damgaard
     <br/>
-    <a rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-nc/3.0/88x31.png" /></a><br />@:This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/">Creative Commons Attribution-NonCommercial 3.0 Unported License</a>.
-    <br/>
-    @:If you would like to use this application, contact us and we'll work something out.
+    <a rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-nc/3.0/88x31.png" /></a>
     <br />
+    This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/">Creative Commons Attribution-NonCommercial 3.0 Unported License</a>.
+    <br/>
+    If you find any bugs while using this application, please copy the error message, if any, and send it to the email below.
+    <br />
+    If you would like to use this application with another venue or similar, send us a mail and we'll work something out.
+    <br/>
             <script type="text/javascript">
             <!--
             // Email obfuscator script 2.1 by Tim Williams, University of Arizona
@@ -42,4 +41,3 @@
             }
             //-->
             </script><noscript>Sorry, you need Javascript enabled to see the email, so we don't get spammed by bots.</noscript>
-}
