--- a/CalendarApplication/CalendarApplication/Views/User/Index.cshtml
+++ b/CalendarApplication/CalendarApplication/Views/User/Index.cshtml
@@ -28,6 +28,9 @@ else {
                 <b>Email</b><br />
                 @Model.Email<br />
                 <br />
+                <b>Phone Number</b><br />
+                @Model.Phone<br />
+                <br />
                 @if (Model.Admin)
                 {
                     @:User is admin
