--- a/CalendarApplication/CalendarApplication/Views/Account/Register.cshtml
+++ b/CalendarApplication/CalendarApplication/Views/Account/Register.cshtml
@@ -44,7 +44,7 @@
             @Html.ValidationMessageFor(model => model.PasswordConfirm)
         </div>
 
-                <div class="editor-label">
+        <div class="editor-label">
             @Html.LabelFor(model => model.RealName)
         </div>
         <div class="editor-field">
@@ -58,6 +58,14 @@
         <div class="editor-field">
             @Html.EditorFor(model => model.Email)
             @Html.ValidationMessageFor(model => model.Email)
+        </div>
+
+        <div class="editor-label">
+            @Html.LabelFor(model => model.Phone)
+        </div>
+        <div class="editor-field">
+            @Html.EditorFor(model => model.Phone)
+            @Html.ValidationMessageFor(model => model.Phone)
         </div>
 
 
