Finished the group view with the new lists. Corrected a small bug in the ListView that caused the list to fill out its container. Renamed GroupView to Group for consistency. Hopefully I got all the links fixed too.

--- a/CalendarApplication/CalendarApplication/Content/Site.css
+++ b/CalendarApplication/CalendarApplication/Content/Site.css
@@ -159,7 +159,9 @@ table.scrollheader th {
 div.scroll {
     border:1px solid black;
     height:200px;
+    width:auto;
     overflow-y:scroll;
+    display:inline-block;
 }
 div.scroll table {
     border-collapse:collapse;
