--- a/CalendarApplication/CalendarApplication/Views/Event/Index.cshtml
+++ b/CalendarApplication/CalendarApplication/Views/Event/Index.cshtml
@@ -109,7 +109,7 @@ else {
                                         case Fieldtype.Float:       @fm.FloatValue break;
                                         case Fieldtype.User:        if(fm.IntValue != 0) { @Html.ActionLink(fm.StringValue, "Index", "User", new { UserId = fm.IntValue }, null) }
                                                                     else { @fm.StringValue } break;
-                                        case Fieldtype.Group:       if(fm.IntValue != 0) { @Html.ActionLink(fm.StringValue, "ViewGroup", "GroupView", new { groupId = fm.IntValue }, null) }
+                                        case Fieldtype.Group:       if(fm.IntValue != 0) { @Html.ActionLink(fm.StringValue, "ViewGroup", "Group", new { groupId = fm.IntValue }, null) }
                                                                     else { @fm.StringValue } break;
                                         case Fieldtype.Text:        @fm.StringValue break;
                                         case Fieldtype.File:        @fm.IntValue break;
@@ -137,7 +137,7 @@ else {
                                                                     @foreach (SelectListItem group in fm.List)
                                                                     {
                                                                         <tr><td>
-                                                                            @Html.ActionLink(group.Text, "ViewGroup", "GroupView", new { groupId = Convert.ToInt32(group.Value) }, null)
+                                                                            @Html.ActionLink(group.Text, "ViewGroup", "Group", new { groupId = Convert.ToInt32(group.Value) }, null)
                                                                         </td></tr>
                                                                     }
                                                                     </table>
