--- a/CalendarApplication/CalendarApplication/Views/Shared/_MenuPartial.cshtml
+++ b/CalendarApplication/CalendarApplication/Views/Shared/_MenuPartial.cshtml
@@ -100,7 +100,7 @@
         
 
         <td  @(curCtrl == "group" ? "class=selected" : "")
-            onclick="gotoUrl('@Url.Action("","GroupView",null)')">
+            onclick="gotoUrl('@Url.Action("","Group",null)')">
             Groups
         </td>
         }
