Fixed small bug in event view (Null pointer when viewing event when not logged in)

--- a/CalendarApplication/CalendarApplication/Views/Event/Index.cshtml
+++ b/CalendarApplication/CalendarApplication/Views/Event/Index.cshtml
@@ -170,7 +170,7 @@ else {
     
     <button onclick="printEvent(@(Model.ID))">Print Event</button>
     
-    if (UserModel.GetCurrent().Admin && Model.Start > DateTime.Now)
+    if (UserModel.GetCurrentUserID() != -1 && UserModel.GetCurrent().Admin && Model.Start > DateTime.Now)
     {
         using (Html.BeginForm(new { ReturnUrl = ViewBag.ReturnUrl }))
         {
