--- a/CalendarApplication/CalendarApplication/Views/Calendar/List.cshtml
+++ b/CalendarApplication/CalendarApplication/Views/Calendar/List.cshtml
@@ -10,6 +10,30 @@
 <script src="@Url.Content("~/Scripts/calendar-script.js")" type="text/javascript"></script>
 <link href="@Url.Content("~/Content/Calendar.css")" rel="stylesheet" type="text/css" />
 
+<style>
+    div.up-arrow {
+        display:inline-block;
+        width:30px;
+        height:16px;
+        background-image:url("/Content/images/up.png");
+        background-repeat:no-repeat;
+        background-size:14px;
+        background-position-x:center;
+        background-position-y:bottom;
+    }
+
+    div.down-arrow {
+        display:inline-block;
+        width:30px;
+        height:16px;
+        background-image:url("/Content/images/down.png");
+        background-repeat:no-repeat;
+        background-size:14px;
+        background-position-x:center;
+        background-position-y:bottom;
+    }
+</style>
+
 <h3 style="color:red">@TempData["errorMsg"]</h3>
 
 <form id="list_form" method="post">
@@ -87,12 +111,48 @@
 
                 <table class="event-list" id ="list">
                     <tr>
-                        <th onclick="sortBy('NAME')">Event name</th>
-                        <th onclick="sortBy('TYPE')">Type</th>
-                        <th onclick="sortBy('CREATOR')">Creator</th>
-                        <th onclick="sortBy('START')">Starting</th>
-                        <th onclick="sortBy('END')">Ending</th>
-                        <th onclick="sortBy('STATE')">State</th>
+                        <th onclick="sortBy('NAME')">
+                            Event name
+                            @if (Model.Order == EventOrder.NAME)
+                            {
+                                <div class="@(Model.Descending ? "up-arrow" : "down-arrow")"></div>
+                            }
+                        </th>
+                        <th onclick="sortBy('TYPE')">
+                            Type
+                            @if (Model.Order == EventOrder.TYPE)
+                            {
+                                <div class="@(Model.Descending ? "up-arrow" : "down-arrow")"></div>
+                            }
+                        </th>
+                        <th onclick="sortBy('CREATOR')">
+                            Creator
+                            @if (Model.Order == EventOrder.CREATOR)
+                            {
+                                <div class="@(Model.Descending ? "up-arrow" : "down-arrow")"></div>
+                            }
+                        </th>
+                        <th onclick="sortBy('START')">
+                            Starting
+                            @if (Model.Order == EventOrder.START)
+                            {
+                                <div class="@(Model.Descending ? "up-arrow" : "down-arrow")"></div>
+                            }
+                        </th>
+                        <th onclick="sortBy('END')">
+                            Ending
+                            @if (Model.Order == EventOrder.END)
+                            {
+                                <div class="@(Model.Descending ? "up-arrow" : "down-arrow")"></div>
+                            }
+                        </th>
+                        <th onclick="sortBy('STATE')">
+                            State
+                            @if (Model.Order == EventOrder.STATE)
+                            {
+                                <div class="@(Model.Descending ? "up-arrow" : "down-arrow")"></div>
+                            }
+                        </th>
                     </tr>
                     @foreach (BasicEvent e in Model.Events)
                     {
@@ -105,6 +165,22 @@
                             <td style="background-color:@e.getColor()">@e.getStateText()</td>
                         </tr>
                     }
+                </table>
+
+                <br />
+                <table class="navigator" id="navi-low">
+                    <tr>
+                        <td onclick="gotoOtherPage(@(Model.EventFrom-Model.Limit < 0 ? 0 : Model.EventFrom-Model.Limit))"><-</td>
+                        @for (int i = 0; Model.TotalEventCount > 0 && i <= (Model.TotalEventCount-1) / Model.Limit; i++)
+                        {
+                            int gotoVal = i * Model.Limit;
+                            if(gotoVal != Model.EventFrom) { <td  onclick="gotoOtherPage(@(gotoVal))">@(i+1)</td> }
+                            else { <td class="selected">@(i+1)</td> }
+                        }
+                        <td onclick="gotoOtherPage(@(Model.EventFrom+Model.Limit > Model.TotalEventCount
+                                                    ? Model.TotalEventCount
+                                                    : Model.EventFrom+Model.Limit))">-></td>
+                    </tr>
                 </table>
             </td>
         </tr>
