--- a/CalendarApplication/CalendarApplication/Views/Group/Index.cshtml
+++ b/CalendarApplication/CalendarApplication/Views/Group/Index.cshtml
@@ -9,12 +9,13 @@
 
 @using (Html.BeginForm())
 {
-    <table class="gridtable">
-        @for (int i = 0; i < Model.GroupList.Count; i++)
-        {
-            <tr>
-                <td>@Html.ActionLink(Model.GroupList[i].Name, "ViewGroup", new {groupId = Model.GroupList[i].ID})</td>
-            </tr>
-        }
-    </table>
+    using(Html.BeginListView("Groups", new string[] { "Name" }))
+                {
+                    for (int i = 0; i < Model.GroupList.Count; i++)
+                    {
+                        <tr>
+                            <td>@Html.ActionLink(Model.GroupList[i].Name, "ViewGroup", "Group", new { groupId = Model.GroupList[i].ID }, null)</td>
+                        </tr>
+                    }
+                }
 }
