--- a/CalendarApplication/CalendarApplication/Views/Event/EditEvent.cshtml
+++ b/CalendarApplication/CalendarApplication/Views/Event/EditEvent.cshtml
@@ -13,6 +13,18 @@
 
 <script src="@Url.Content("~/Scripts/edit-event.js")" type="text/javascript"></script>
 
+<style>
+    #type_warning {
+        color:white;
+        background-color:red;
+        text-align:center;
+        position:absolute;
+        z-index:2;
+        display:none;
+        width:280px;
+    }
+</style>
+
 @using (Html.BeginForm()) {
     @Html.HiddenFor(m => m.ID)
 
@@ -33,15 +45,28 @@
                 @Html.LabelFor(m => m.SelectedEventType, new { style = "font-weight:bold" })
                 @if(Model.CanChangeType)
                 {
-                    @Html.DropDownListFor(m => Model.SelectedEventType,
-                                            new SelectList(Model.EventTypes, "Value", "Text"),
-                                            new { onchange="{ getSpecifics(this.value); }" })
+                    <div style="position:relative;z-index:1">
+                        @Html.DropDownListFor(m => Model.SelectedEventType,
+                                                new SelectList(Model.EventTypes, "Value", "Text"),
+                                                new { onchange="typeCheck(this.value)", style="position:absolute;z-index:1" })
+                        @if(Model.ID != -1)
+                        {
+                            <div id="type_warning">
+                                Warning! Changing the type will delete the data previously added for this event.
+                                Are you sure?<br />
+                                <input type="button" value="Yes" onclick="typeCheckResponse(true,@Model.SelectedEventType)" />
+                                <input type="button" value="No" onclick="typeCheckResponse(false,@Model.SelectedEventType)" />
+                                <br />
+                                @Html.CheckBoxFor(m => m.DeleteFiles)<span style="font-size:8pt">delete files too.</span>
+                            </div>
+                        }
+                    </div>
                 }
                 else
                 {
                     @Html.DropDownListFor(m => Model.SelectedEventType,
                                             new SelectList(Model.EventTypes, "Value", "Text"),
-                                            new { onchange="{ getSpecifics(this.value); }", disabled="disabled" })
+                                            new { disabled="disabled" })
                     @Html.HiddenFor(m => m.SelectedEventType);
                 }
                 <div class="validation-summary-errors" id="SelectedEventType_Error" style="display:none">
