Changed the state tags to use the new Absalon like tags. Added some comments.

--- a/CalendarApplication/CalendarApplication/Views/Event/EditEvent.cshtml
+++ b/CalendarApplication/CalendarApplication/Views/Event/EditEvent.cshtml
@@ -75,7 +75,7 @@
                 <br />
                 <br />
                 
-                <b>State:</b> <span id="state_text" style="color:@Model.getColor()">@Model.getStateText()</span>
+                <b>State:</b> <span id="state_text" class="state_@Model.State"></span>
                 @if (UserModel.GetCurrent().Admin)
                 {
                     <!-- Admins may approved/disapprove the event -->
