--- a/CalendarApplication/CalendarApplication/Views/Calendar/_FilterPartial.cshtml
+++ b/CalendarApplication/CalendarApplication/Views/Calendar/_FilterPartial.cshtml
@@ -7,11 +7,11 @@
     <legend>Filter</legend>
         <b>Event States:</b><br />
         @Html.CheckBoxFor(model => Model.Filter.ViewState0)
-        <span style="color:@BasicEvent.getColor(0)">@BasicEvent.getStateText(0)</span><br />
+        <span class="state_0"></span><br />
         @Html.CheckBoxFor(model => Model.Filter.ViewState1)
-        <span style="color:@BasicEvent.getColor(1)">@BasicEvent.getStateText(1)</span><br />
+        <span class="state_1"></span><br />
         @Html.CheckBoxFor(model => Model.Filter.ViewState2)
-        <span style="color:@BasicEvent.getColor(2)">@BasicEvent.getStateText(2)</span><br />
+        <span class="state_2"></span><br />
 
         <b>Event Types:</b><input type="checkbox" id="checkAll" checked="checked" onchange="changeCheckboxes(this)" /><br />
         @for (int i = 0; i < Model.Filter.Eventtypes.Count; i++)
